--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-ws": "^5.0.2",
     "mongoose": "^6.6.5",
     "mongoose-id-validator": "^0.6.0",
     "mongoose-unique-validator": "^3.1.0",
